v.5.01 (11 November 2018)
    - Code readability fixes.

v.5.00 (10 November 2018)
    - Removed unnecessarily complex integrated circuits concept.
    - Replaced in-house DSPatch::internal::Threads with std::threads.
    - Removed all friend classes.
    - Moved signal reference counting into DSPatch::internal::Component.
    - Moved RunType logic into Signal.
    - Added Signal::HasValue() and Signal::GetType().
    - Loads of optimisations and static code analysis fixes.

v.4.10 (27 October 2018)
    - Allow out-of-order component processes.
    - Fixed threaded integrated circuit bugs.

v.4.00 (09 October 2018)
    - Major C++14 refactor.
    - Moved audio-related example components to the DSPatchables project.
    - Removed overly complex Parameter concept.
    - Removed the horrid "Global Circuit", along with DSPatch::Finalize().
    - Greatly simplified component plugins.
    - Optimised signal transfer by moving rather than copying where possible.
    - Added CI and unit tests.

v.3.00 (07 April 2015)
    - Reference parameters by index for better performance.
    - Cleaned up code formatting and class interfaces.
    - DisconnectComponent fixed to also remove outgoing wires.
    - ResumeAutoTick() resumes only once called for every PauseAutoTick().
    - Updates to support DSPatcher.

v.2.70 (21 December 2014)
    - Added support for DspComponent plugins (DspPlugin + DspPluginLoader).
    - Fixed build and install scripts.

v.2.62 (18 August 2014)
    - Added alternative Get* methods returning const pointers.
    - Increased build warning level and fixed all issues.
    - Uninitialised variable fix for DspParameter.
    - Fixed GetInput/Output/ParameterName() empty string return bug.

v.2.61 (16 June 2014)
    - Introduced component parameters (DspParameter).
    - Added DspComponent user callback mechanism.
    - Improved const-correctness and code style.
    - Added ability to remove single IO pins.

v.2.60 (19 January 2014)